package pageweb;

public interface Tag {
    public String toHTML();
}
