@startuml


class Paragraph {
  - String text
  toHTML() : String
}

class Link {
  - String text
  - String href
  toHTML() : String
}

class Img {
  - String src
  - String alt
  toHTML() : String
}

class Title {
  - String text
  - int lvl
  toHTML() : String
}


interface Tag{
  toHTML()
}

class PageWeb{
    {final} String header
    {final} String footer
    toHTML() : String
}

Tag <|-- Paragraph
Tag <|-- Link
Tag <|-- Title
Tag <|-- Img

PageWeb -> Tag : *
@enduml